<resources>
    <string name="app_name">Pocket Doctor</string>
    <string name="Welcome">Welcome!</string>
    <string name="subtitleWelcome">to Doctor Pocket App</string>
    <string name="HomeTitle">Home</string>
    <string name="Profile">Profile</string>
    <string name="PatientAccount">Patient account</string>
    <string name="DoctorAccount">Doctor Account</string>
    <string name="CashierAccount">Cashier Account</string>
    <string name="UpdateOrCreate">Update or create patient\'s account</string>
    <string name="validEmail">Enter a valid email</string>
    <string name="address">Address</string>
    <string name="sign_up">Sign Up</string>
    <string name="log_in">Log In</string>
    <string name="name">Name</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">FORGOT YOUR PASSWORD?</string>
    <string name="sign_in_error">Wrong username or password</string>
    <string name="email">Email</string>
    <string name="show">Show</string>
    <string name="already_hav">ALREADY HAVE ACCOUNT? LOGIN</string>
    <string name="imgHomeNavBar">Home</string>
    <string name="txtUpdateUserAccount">Update or create users’ accounts</string>
    <string name="txtAdminUserAccountView">User Account</string>
    <string name="txtSelectAnAction">Select an Action</string>
    <string name="imagePlus">Plus image</string>
    <string name="txtCreateNewUserAccountOption">Create new user account</string>
    <string name="txtAddNewUSer">Click here to add a new user</string>
    <string name="imagePencil">Pencil Icon</string>
    <string name="txtEditUserAccountOption">Edit user’s account</string>
    <string name="txtEditUser">Click here to edit a user’s account</string>
    <string name="txtUserCreateAccount">Create User account</string>
    <string name="hintPersonName">Enter User’s name</string>
    <string name="txtCreateUserNameLabel">Name</string>
    <string name="hintEmail">Enter User’s email</string>
    <string name="txtCreateUserEmailLabel">Email</string>
    <string name="txtCreateUserPhoneLabel">Phone</string>
    <string name="promptSpinnerMsp">Select Option</string>
    <string name="hintLastName">Enter Last Name</string>
    <string name="hintMSP">Enter yes or no</string>
    <string name="titleCashierMain">Cashier Home</string>
    <string name="paymentCheckIn">Payment check-in</string>
    <string name="paymentReminder">Send Payment Reminder</string>
    <string-array name="txtMspSelection">
        <item>Yes</item>
        <item>No</item>
    </string-array>
    <string name="txtMSPLabel">MSP</string>
    <string name="txtAddProfilePicture">Add profile photo</string>
    <string name="imgAvatarIcon">Avatar Icon</string>
    <string name="btnSaveNewUser">Save New User</string>
    <string name="btnCancelUserCreation">Cancel</string>
    <string name="txtEditUserAccount">Editing User’s account</string>
    <string name="txtChangeProfilePicture">Change profile photo</string>
    <string name="buttonEditUser">Save Changes</string>
    <string name="txtSearchUserIdTitle">Search user’s ID</string>
    <string name="title_activity_main_navigator">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="tittle_listView_user">Search User</string>
    <string name="txtEditLastName">Last Name</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_tracker">Food Tracker</string>
    <string name="queryHint">Enter User Email</string>
    <string name="find_doctor">Find a Doctor</string>
    <string name="hint_enter_address">Enter your city</string>
    <string name="hint_enter_zipCode">Enter your Zip code</string>
    <string name="find_doctor_near">Find a Doctor Near You</string>
    <string name="back">Back</string>
    <string name="list_of_doc">List of doctors near you:</string>
    <string name="layoutDescription">Doctor list</string>
    <string name="book">Book</string>
    <string name="online_help">Online Help</string>
    <string name="book_appointment">Book an appointment</string>
    <string name="your_message_to_doctor">Your message to doctor</string>
    <string name="send_message">Send message</string>
    <string name="messages_history">Messages history</string>
    <string name="messages_from_doctors">Messages from doctors</string>
    <string name="change_profile_pic">Change profile photo</string>
    <string name="make_payment">Make payment Now</string>
    <string name="view_calories">View Calories Consumption</string>
    <string name="status">Status</string>
    <string name="my_profile">My Profile</string>
    <string name="edit">Edit</string>
    <string name="log_out">Log Out</string>
    <string name="messages_from_patients">Messages from patients</string>
    <string name="your_message_to_the_patient">your message to the patient</string>
    <string name="newPassword">Enter New Password</string>
    <string name="confirm_newPassword">Confirm New Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_error">User Not Found</string>
    <string name="hintMsg">Please enter any pre-exsisting conditions and/or active medication in your booking message.</string>
</resources>
