<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Sign Up -->
    <!-- Login -->
    <View
        android:id="@+id/icon_x"
        android:layout_width="16dp"
        android:layout_height="16dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="33dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="102dp"
        android:background="@drawable/close_36"
        app:layout_constraintEnd_toStartOf="@+id/sign_up"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        />

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="104dp"
        android:layout_height="34dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="152dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="155dp"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="1sp"
        android:text="@string/sign_up"
        android:textAppearance="@style/sign_up"
        android:translationY="-0.28sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/login"
        android:layout_width="45dp"
        android:layout_height="26dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="75dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="35dp"
        android:clickable="true"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:onClick="gotoLoginActivity"
        android:text="@string/log_in"
        android:textAppearance="@style/login"
        android:translationY="-2.62sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sign_up"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />

    <EditText
        android:id="@+id/editTextTextFirstName"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="40dp"
        android:autofillHints=""
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/firstName"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <EditText
        android:id="@+id/editTextTextLastName"
        android:layout_width="163dp"
        android:layout_height="45dp"
        android:layout_marginStart="212dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="36dp"
        android:autofillHints=""
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/lastName"
        android:inputType="textPersonName"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_up" />

    <EditText
        android:id="@+id/editTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:autofillHints=""
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/email"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextFirstName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="34dp"
        android:autofillHints=""
        android:background="@drawable/bg"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="15dp"
        android:paddingEnd="10dp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailAddress" />

    <TextView
        android:id="@+id/showHidePass"
        android:layout_width="53dp"
        android:layout_height="24dp"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="316dp"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="55dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="top"
        android:lineSpacingExtra="5sp"
        android:onClick="showPassword"
        android:text="@string/show"
        android:textAppearance="@style/show"
        android:translationY="-2.62sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

    <Button
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginTop="57dp"
        android:background="@drawable/button_prim"
        android:letterSpacing="0.09"
        android:onClick="signup"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showHidePass" />

    <TextView
        android:id="@+id/already_hav"
        android:layout_width="251dp"
        android:layout_height="16dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="80dp"
        android:clickable="true"
        android:gravity="center_horizontal|top"
        android:lineSpacingExtra="0sp"
        android:onClick="gotoLoginActivity"
        android:text="@string/already_hav"
        android:textAppearance="@style/already_hav"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignUp"
        android:focusable="true" />

    <Spinner
        android:id="@+id/mspRegister"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="37dp"
        android:entries="@array/txtMspSelection"
        android:prompt="@string/promptSpinnerMsp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/showHidePass" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="46dp"
        android:text="@string/txtMSPLabel"
        app:layout_constraintEnd_toStartOf="@+id/mspRegister"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />

</androidx.constraintlayout.widget.ConstraintLayout>